[gd_scene load_steps=6 format=3 uid="uid://dk0w508exyo6x"]

[ext_resource type="Script" path="res://scripts/telainicial.gd" id="1_hh31s"]
[ext_resource type="Texture2D" uid="uid://dh4n8sny6nckq" path="res://assets/logo background.png" id="2_abjjn"]
[ext_resource type="Texture2D" uid="uid://blaw6en0obee1" path="res://assets/Main Character/Standing (32 x 48).png" id="2_r61nf"]
[ext_resource type="FontFile" uid="uid://bctqnnldliief" path="res://assets/simpletix.otf" id="3_i5esr"]
[ext_resource type="AudioStream" uid="uid://c3u7x2vuml5jj" path="res://sons/musica do menu.mp3" id="5_abvsv"]

[node name="telainicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hh31s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("2_abjjn")
expand_mode = 5

[node name="HBoxContainer" type="Node" parent="MarginContainer"]

[node name="VBoxContainer" type="Node" parent="MarginContainer/HBoxContainer"]

[node name="Start" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 2
offset_left = 733.0
offset_top = 582.0
offset_right = 1161.0
offset_bottom = 662.0
theme_override_fonts/font = ExtResource("3_i5esr")
theme_override_font_sizes/font_size = 35
text = "START"

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 2
offset_left = 734.0
offset_top = 667.0
offset_right = 1148.0
offset_bottom = 749.0
theme_override_fonts/font = ExtResource("3_i5esr")
theme_override_font_sizes/font_size = 35
text = "SETTINGS
"

[node name="Credits" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 2
offset_left = 728.0
offset_top = 773.0
offset_right = 1141.0
offset_bottom = 860.0
theme_override_fonts/font = ExtResource("3_i5esr")
theme_override_font_sizes/font_size = 35
text = "CREDITS"

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 2
offset_left = 734.0
offset_top = 882.0
offset_right = 1134.0
offset_bottom = 989.0
theme_override_fonts/font = ExtResource("3_i5esr")
theme_override_font_sizes/font_size = 35
text = "QUIT"

[node name="Personagem" type="TextureRect" parent="MarginContainer/HBoxContainer"]
visible = false
texture = ExtResource("2_r61nf")
expand_mode = 2
flip_h = true

[node name="initial_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_abvsv")

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Settings" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
